1.server.js & orderController - socket.io removed 2. cart.js - Overflow UI Fix

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -6,6 +6,12 @@ body {
     @apply bg-white text-primary font-primary;
 }
 
+html,
+body {
+    overflow-x: hidden !important;
+}
+
+
 /* styles/globals.css */
 .hide-scrollbar {
     scrollbar-width: none;
